eacer.subnet-scanner/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subnet-scanner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subnet-scanner
  template:
    metadata:
      labels:
        app: subnet-scanner
    spec:
      volumes:
        - name: icon-volume
          emptyDir: {}
      containers:
        - name: subnet-scanner
          image: eacer/subnet-scanner:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: icon-volume
              mountPath: /app/favicon.png
              subPath: favicon.png
