eacer.subnet-scanner/service.yml
apiVersion: v1
kind: Service
metadata:
  name: subnet-scanner-service
spec:
  selector:
    app: subnet-scanner
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
