eacer.subnet-scanner/ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: subnet-scanner-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`need-ip.xyz.abc`)
      kind: Rule
      services:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
